gitops/clusters/production/flux-system/notification-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: notification-controller-discord-egress
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app: notification-controller
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: discord.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
